@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.gamedo</groupId>
         <artifactId>gamedo-persistence-parent</artifactId>
-        <version>${revision}</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gamedo-persistence-lombok</artifactId>
@@ -16,6 +16,19 @@
         <dependency>
             <groupId>org.gamedo</groupId>
             <artifactId>gamedo-persistence</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>gamedo-persistence-lombok-unshaded</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kohsuke.metainf-services</groupId>
+            <artifactId>metainf-services</artifactId>
+            <version>1.8</version>
         </dependency>
     </dependencies>
 
@@ -27,6 +40,8 @@
                 <configuration>
                     <compilerArgs>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
